# bazel_examples

./: MODULE.bazel  test_cmd.sh
app/: BUILD  Info.plist  objc_lib.m  swift_lib.swift
